// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should handle text change 1`] = `
<DashboardListFilters
  filters={
    Object {
      "cuisine": "",
      "dishType": "",
      "keyIngredients": Array [],
      "text": "",
    }
  }
  setCuisineFilter={[MockFunction]}
  setKeyIngredientFilter={[MockFunction]}
  setTextFilter={[MockFunction]}
  setTypeFilter={[MockFunction]}
>
  <div>
    <Input
      onChange={[Function]}
      placeholder="Search..."
      size="big"
      type="text"
      value=""
    >
      <div
        className="ui big input"
      >
        <input
          onChange={[Function]}
          placeholder="Search..."
          type="text"
          value=""
        />
      </div>
    </Input>
    <Dropdown
      additionLabel="Add "
      additionPosition="top"
      clearable={true}
      closeOnBlur={true}
      closeOnEscape={true}
      deburr={false}
      fluid={true}
      icon="dropdown"
      minCharacters={1}
      multiple={true}
      name="keyIngredient"
      noResultsMessage="No results found."
      onChange={[Function]}
      openOnFocus={true}
      options={
        Array [
          Object {
            "key": "1",
            "text": "Salt",
            "value": "Salt",
          },
          Object {
            "key": "2",
            "text": "Lettuce",
            "value": "Lettuce",
          },
          Object {
            "key": "3",
            "text": "Yoghurt",
            "value": "Yoghurt",
          },
        ]
      }
      placeholder="Select key ingredient"
      renderLabel={[Function]}
      searchInput="text"
      selectOnBlur={true}
      selectOnNavigation={true}
      selection={true}
      value={Array []}
      wrapSelection={true}
    >
      <Ref
        innerRef={
          Object {
            "current": <div
              aria-expanded="false"
              aria-multiselectable="true"
              class="ui fluid multiple selection dropdown"
              name="keyIngredient"
              role="listbox"
              tabindex="0"
            >
              <div
                aria-atomic="true"
                aria-live="polite"
                class="default text"
                role="alert"
              >
                Select key ingredient
              </div>
              <i
                aria-hidden="true"
                class="dropdown icon"
              />
              <div
                class="menu transition"
              >
                <div
                  aria-checked="false"
                  aria-selected="true"
                  class="selected item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Salt
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Lettuce
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Yoghurt
                  </span>
                </div>
              </div>
            </div>,
          }
        }
      >
        <RefFindNode
          innerRef={
            Object {
              "current": <div
                aria-expanded="false"
                aria-multiselectable="true"
                class="ui fluid multiple selection dropdown"
                name="keyIngredient"
                role="listbox"
                tabindex="0"
              >
                <div
                  aria-atomic="true"
                  aria-live="polite"
                  class="default text"
                  role="alert"
                >
                  Select key ingredient
                </div>
                <i
                  aria-hidden="true"
                  class="dropdown icon"
                />
                <div
                  class="menu transition"
                >
                  <div
                    aria-checked="false"
                    aria-selected="true"
                    class="selected item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      Salt
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      Lettuce
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      Yoghurt
                    </span>
                  </div>
                </div>
              </div>,
            }
          }
        >
          <div
            aria-expanded={false}
            aria-multiselectable={true}
            className="ui fluid multiple selection dropdown"
            name="keyIngredient"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            role="listbox"
            tabIndex={0}
          >
            <div
              aria-atomic={true}
              aria-live="polite"
              className="default text"
              role="alert"
            >
              Select key ingredient
            </div>
            <Icon
              as="i"
              className=""
              name="dropdown"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="dropdown icon"
                onClick={[Function]}
              />
            </Icon>
            <DropdownMenu>
              <div
                className="menu transition"
              >
                <DropdownItem
                  active={false}
                  key="1"
                  onClick={[Function]}
                  selected={true}
                  style={
                    Object {
                      "pointerEvents": "all",
                    }
                  }
                  text="Salt"
                  value="Salt"
                >
                  <div
                    aria-checked={false}
                    aria-selected={true}
                    className="selected item"
                    onClick={[Function]}
                    role="option"
                    style={
                      Object {
                        "pointerEvents": "all",
                      }
                    }
                  >
                    <span
                      className="text"
                    >
                      Salt
                    </span>
                  </div>
                </DropdownItem>
                <DropdownItem
                  active={false}
                  key="2"
                  onClick={[Function]}
                  selected={false}
                  style={
                    Object {
                      "pointerEvents": "all",
                    }
                  }
                  text="Lettuce"
                  value="Lettuce"
                >
                  <div
                    aria-checked={false}
                    aria-selected={false}
                    className="item"
                    onClick={[Function]}
                    role="option"
                    style={
                      Object {
                        "pointerEvents": "all",
                      }
                    }
                  >
                    <span
                      className="text"
                    >
                      Lettuce
                    </span>
                  </div>
                </DropdownItem>
                <DropdownItem
                  active={false}
                  key="3"
                  onClick={[Function]}
                  selected={false}
                  style={
                    Object {
                      "pointerEvents": "all",
                    }
                  }
                  text="Yoghurt"
                  value="Yoghurt"
                >
                  <div
                    aria-checked={false}
                    aria-selected={false}
                    className="item"
                    onClick={[Function]}
                    role="option"
                    style={
                      Object {
                        "pointerEvents": "all",
                      }
                    }
                  >
                    <span
                      className="text"
                    >
                      Yoghurt
                    </span>
                  </div>
                </DropdownItem>
              </div>
            </DropdownMenu>
          </div>
        </RefFindNode>
      </Ref>
    </Dropdown>
    <Dropdown
      additionLabel="Add "
      additionPosition="top"
      clearable={true}
      closeOnBlur={true}
      closeOnEscape={true}
      deburr={false}
      fluid={true}
      icon="dropdown"
      minCharacters={1}
      name="cuisine"
      noResultsMessage="No results found."
      onChange={[Function]}
      openOnFocus={true}
      options={
        Array [
          Object {
            "key": "Mexican",
            "text": "Mexican",
            "value": "Mexican",
          },
          Object {
            "key": "Italian",
            "text": "Italian",
            "value": "Italian",
          },
          Object {
            "key": "Asian",
            "text": "Asian",
            "value": "Asian",
          },
          Object {
            "key": "Indian",
            "text": "Indian",
            "value": "Indian",
          },
          Object {
            "key": "Mediterranean",
            "text": "Mediterranean",
            "value": "Mediterranean",
          },
          Object {
            "key": "Thai",
            "text": "Thai",
            "value": "Thai",
          },
          Object {
            "key": "French",
            "text": "French",
            "value": "French",
          },
          Object {
            "key": "German",
            "text": "German",
            "value": "German",
          },
          Object {
            "key": "Carribbean",
            "text": "Carribbean",
            "value": "Carribbean",
          },
        ]
      }
      placeholder="Select cuisine"
      renderLabel={[Function]}
      searchInput="text"
      selectOnBlur={true}
      selectOnNavigation={true}
      selection={true}
      value=""
      wrapSelection={true}
    >
      <Ref
        innerRef={
          Object {
            "current": <div
              aria-expanded="false"
              class="ui fluid selection dropdown"
              name="cuisine"
              role="listbox"
              tabindex="0"
            >
              <div
                aria-atomic="true"
                aria-live="polite"
                class="default text"
                role="alert"
              >
                Select cuisine
              </div>
              <i
                aria-hidden="true"
                class="dropdown icon"
              />
              <div
                class="menu transition"
              >
                <div
                  aria-checked="false"
                  aria-selected="true"
                  class="selected item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Mexican
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Italian
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Asian
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Indian
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Mediterranean
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Thai
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    French
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    German
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Carribbean
                  </span>
                </div>
              </div>
            </div>,
          }
        }
      >
        <RefFindNode
          innerRef={
            Object {
              "current": <div
                aria-expanded="false"
                class="ui fluid selection dropdown"
                name="cuisine"
                role="listbox"
                tabindex="0"
              >
                <div
                  aria-atomic="true"
                  aria-live="polite"
                  class="default text"
                  role="alert"
                >
                  Select cuisine
                </div>
                <i
                  aria-hidden="true"
                  class="dropdown icon"
                />
                <div
                  class="menu transition"
                >
                  <div
                    aria-checked="false"
                    aria-selected="true"
                    class="selected item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      Mexican
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      Italian
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      Asian
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      Indian
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      Mediterranean
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      Thai
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      French
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      German
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      Carribbean
                    </span>
                  </div>
                </div>
              </div>,
            }
          }
        >
          <div
            aria-expanded={false}
            className="ui fluid selection dropdown"
            name="cuisine"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            role="listbox"
            tabIndex={0}
          >
            <div
              aria-atomic={true}
              aria-live="polite"
              className="default text"
              role="alert"
            >
              Select cuisine
            </div>
            <Icon
              as="i"
              className=""
              name="dropdown"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="dropdown icon"
                onClick={[Function]}
              />
            </Icon>
            <DropdownMenu>
              <div
                className="menu transition"
              >
                <DropdownItem
                  active={false}
                  key="Mexican"
                  onClick={[Function]}
                  selected={true}
                  style={
                    Object {
                      "pointerEvents": "all",
                    }
                  }
                  text="Mexican"
                  value="Mexican"
                >
                  <div
                    aria-checked={false}
                    aria-selected={true}
                    className="selected item"
                    onClick={[Function]}
                    role="option"
                    style={
                      Object {
                        "pointerEvents": "all",
                      }
                    }
                  >
                    <span
                      className="text"
                    >
                      Mexican
                    </span>
                  </div>
                </DropdownItem>
                <DropdownItem
                  active={false}
                  key="Italian"
                  onClick={[Function]}
                  selected={false}
                  style={
                    Object {
                      "pointerEvents": "all",
                    }
                  }
                  text="Italian"
                  value="Italian"
                >
                  <div
                    aria-checked={false}
                    aria-selected={false}
                    className="item"
                    onClick={[Function]}
                    role="option"
                    style={
                      Object {
                        "pointerEvents": "all",
                      }
                    }
                  >
                    <span
                      className="text"
                    >
                      Italian
                    </span>
                  </div>
                </DropdownItem>
                <DropdownItem
                  active={false}
                  key="Asian"
                  onClick={[Function]}
                  selected={false}
                  style={
                    Object {
                      "pointerEvents": "all",
                    }
                  }
                  text="Asian"
                  value="Asian"
                >
                  <div
                    aria-checked={false}
                    aria-selected={false}
                    className="item"
                    onClick={[Function]}
                    role="option"
                    style={
                      Object {
                        "pointerEvents": "all",
                      }
                    }
                  >
                    <span
                      className="text"
                    >
                      Asian
                    </span>
                  </div>
                </DropdownItem>
                <DropdownItem
                  active={false}
                  key="Indian"
                  onClick={[Function]}
                  selected={false}
                  style={
                    Object {
                      "pointerEvents": "all",
                    }
                  }
                  text="Indian"
                  value="Indian"
                >
                  <div
                    aria-checked={false}
                    aria-selected={false}
                    className="item"
                    onClick={[Function]}
                    role="option"
                    style={
                      Object {
                        "pointerEvents": "all",
                      }
                    }
                  >
                    <span
                      className="text"
                    >
                      Indian
                    </span>
                  </div>
                </DropdownItem>
                <DropdownItem
                  active={false}
                  key="Mediterranean"
                  onClick={[Function]}
                  selected={false}
                  style={
                    Object {
                      "pointerEvents": "all",
                    }
                  }
                  text="Mediterranean"
                  value="Mediterranean"
                >
                  <div
                    aria-checked={false}
                    aria-selected={false}
                    className="item"
                    onClick={[Function]}
                    role="option"
                    style={
                      Object {
                        "pointerEvents": "all",
                      }
                    }
                  >
                    <span
                      className="text"
                    >
                      Mediterranean
                    </span>
                  </div>
                </DropdownItem>
                <DropdownItem
                  active={false}
                  key="Thai"
                  onClick={[Function]}
                  selected={false}
                  style={
                    Object {
                      "pointerEvents": "all",
                    }
                  }
                  text="Thai"
                  value="Thai"
                >
                  <div
                    aria-checked={false}
                    aria-selected={false}
                    className="item"
                    onClick={[Function]}
                    role="option"
                    style={
                      Object {
                        "pointerEvents": "all",
                      }
                    }
                  >
                    <span
                      className="text"
                    >
                      Thai
                    </span>
                  </div>
                </DropdownItem>
                <DropdownItem
                  active={false}
                  key="French"
                  onClick={[Function]}
                  selected={false}
                  style={
                    Object {
                      "pointerEvents": "all",
                    }
                  }
                  text="French"
                  value="French"
                >
                  <div
                    aria-checked={false}
                    aria-selected={false}
                    className="item"
                    onClick={[Function]}
                    role="option"
                    style={
                      Object {
                        "pointerEvents": "all",
                      }
                    }
                  >
                    <span
                      className="text"
                    >
                      French
                    </span>
                  </div>
                </DropdownItem>
                <DropdownItem
                  active={false}
                  key="German"
                  onClick={[Function]}
                  selected={false}
                  style={
                    Object {
                      "pointerEvents": "all",
                    }
                  }
                  text="German"
                  value="German"
                >
                  <div
                    aria-checked={false}
                    aria-selected={false}
                    className="item"
                    onClick={[Function]}
                    role="option"
                    style={
                      Object {
                        "pointerEvents": "all",
                      }
                    }
                  >
                    <span
                      className="text"
                    >
                      German
                    </span>
                  </div>
                </DropdownItem>
                <DropdownItem
                  active={false}
                  key="Carribbean"
                  onClick={[Function]}
                  selected={false}
                  style={
                    Object {
                      "pointerEvents": "all",
                    }
                  }
                  text="Carribbean"
                  value="Carribbean"
                >
                  <div
                    aria-checked={false}
                    aria-selected={false}
                    className="item"
                    onClick={[Function]}
                    role="option"
                    style={
                      Object {
                        "pointerEvents": "all",
                      }
                    }
                  >
                    <span
                      className="text"
                    >
                      Carribbean
                    </span>
                  </div>
                </DropdownItem>
              </div>
            </DropdownMenu>
          </div>
        </RefFindNode>
      </Ref>
    </Dropdown>
    <Dropdown
      additionLabel="Add "
      additionPosition="top"
      clearable={true}
      closeOnBlur={true}
      closeOnEscape={true}
      deburr={false}
      fluid={true}
      icon="dropdown"
      minCharacters={1}
      name="type"
      noResultsMessage="No results found."
      onChange={[Function]}
      openOnFocus={true}
      options={
        Array [
          Object {
            "key": "Breakfast",
            "text": "Breakfast",
            "value": "Breakfast",
          },
          Object {
            "key": "Lunch",
            "text": "Lunch",
            "value": "Lunch",
          },
          Object {
            "key": "Dinner",
            "text": "Dinner",
            "value": "Dinner",
          },
          Object {
            "key": "Snack",
            "text": "Snack",
            "value": "Snack",
          },
          Object {
            "key": "Dessert",
            "text": "Dessert",
            "value": "Dessert",
          },
        ]
      }
      placeholder="Select type"
      renderLabel={[Function]}
      searchInput="text"
      selectOnBlur={true}
      selectOnNavigation={true}
      selection={true}
      value=""
      wrapSelection={true}
    >
      <Ref
        innerRef={
          Object {
            "current": <div
              aria-expanded="false"
              class="ui fluid selection dropdown"
              name="type"
              role="listbox"
              tabindex="0"
            >
              <div
                aria-atomic="true"
                aria-live="polite"
                class="default text"
                role="alert"
              >
                Select type
              </div>
              <i
                aria-hidden="true"
                class="dropdown icon"
              />
              <div
                class="menu transition"
              >
                <div
                  aria-checked="false"
                  aria-selected="true"
                  class="selected item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Breakfast
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Lunch
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Dinner
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Snack
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Dessert
                  </span>
                </div>
              </div>
            </div>,
          }
        }
      >
        <RefFindNode
          innerRef={
            Object {
              "current": <div
                aria-expanded="false"
                class="ui fluid selection dropdown"
                name="type"
                role="listbox"
                tabindex="0"
              >
                <div
                  aria-atomic="true"
                  aria-live="polite"
                  class="default text"
                  role="alert"
                >
                  Select type
                </div>
                <i
                  aria-hidden="true"
                  class="dropdown icon"
                />
                <div
                  class="menu transition"
                >
                  <div
                    aria-checked="false"
                    aria-selected="true"
                    class="selected item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      Breakfast
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      Lunch
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      Dinner
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      Snack
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      Dessert
                    </span>
                  </div>
                </div>
              </div>,
            }
          }
        >
          <div
            aria-expanded={false}
            className="ui fluid selection dropdown"
            name="type"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            role="listbox"
            tabIndex={0}
          >
            <div
              aria-atomic={true}
              aria-live="polite"
              className="default text"
              role="alert"
            >
              Select type
            </div>
            <Icon
              as="i"
              className=""
              name="dropdown"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="dropdown icon"
                onClick={[Function]}
              />
            </Icon>
            <DropdownMenu>
              <div
                className="menu transition"
              >
                <DropdownItem
                  active={false}
                  key="Breakfast"
                  onClick={[Function]}
                  selected={true}
                  style={
                    Object {
                      "pointerEvents": "all",
                    }
                  }
                  text="Breakfast"
                  value="Breakfast"
                >
                  <div
                    aria-checked={false}
                    aria-selected={true}
                    className="selected item"
                    onClick={[Function]}
                    role="option"
                    style={
                      Object {
                        "pointerEvents": "all",
                      }
                    }
                  >
                    <span
                      className="text"
                    >
                      Breakfast
                    </span>
                  </div>
                </DropdownItem>
                <DropdownItem
                  active={false}
                  key="Lunch"
                  onClick={[Function]}
                  selected={false}
                  style={
                    Object {
                      "pointerEvents": "all",
                    }
                  }
                  text="Lunch"
                  value="Lunch"
                >
                  <div
                    aria-checked={false}
                    aria-selected={false}
                    className="item"
                    onClick={[Function]}
                    role="option"
                    style={
                      Object {
                        "pointerEvents": "all",
                      }
                    }
                  >
                    <span
                      className="text"
                    >
                      Lunch
                    </span>
                  </div>
                </DropdownItem>
                <DropdownItem
                  active={false}
                  key="Dinner"
                  onClick={[Function]}
                  selected={false}
                  style={
                    Object {
                      "pointerEvents": "all",
                    }
                  }
                  text="Dinner"
                  value="Dinner"
                >
                  <div
                    aria-checked={false}
                    aria-selected={false}
                    className="item"
                    onClick={[Function]}
                    role="option"
                    style={
                      Object {
                        "pointerEvents": "all",
                      }
                    }
                  >
                    <span
                      className="text"
                    >
                      Dinner
                    </span>
                  </div>
                </DropdownItem>
                <DropdownItem
                  active={false}
                  key="Snack"
                  onClick={[Function]}
                  selected={false}
                  style={
                    Object {
                      "pointerEvents": "all",
                    }
                  }
                  text="Snack"
                  value="Snack"
                >
                  <div
                    aria-checked={false}
                    aria-selected={false}
                    className="item"
                    onClick={[Function]}
                    role="option"
                    style={
                      Object {
                        "pointerEvents": "all",
                      }
                    }
                  >
                    <span
                      className="text"
                    >
                      Snack
                    </span>
                  </div>
                </DropdownItem>
                <DropdownItem
                  active={false}
                  key="Dessert"
                  onClick={[Function]}
                  selected={false}
                  style={
                    Object {
                      "pointerEvents": "all",
                    }
                  }
                  text="Dessert"
                  value="Dessert"
                >
                  <div
                    aria-checked={false}
                    aria-selected={false}
                    className="item"
                    onClick={[Function]}
                    role="option"
                    style={
                      Object {
                        "pointerEvents": "all",
                      }
                    }
                  >
                    <span
                      className="text"
                    >
                      Dessert
                    </span>
                  </div>
                </DropdownItem>
              </div>
            </DropdownMenu>
          </div>
        </RefFindNode>
      </Ref>
    </Dropdown>
  </div>
</DashboardListFilters>
`;

exports[`should render DashbaordListFilters correctly 1`] = `
<DashboardListFilters
  filters={
    Object {
      "cuisine": "",
      "dishType": "",
      "keyIngredients": Array [],
      "text": "",
    }
  }
  setCuisineFilter={[MockFunction]}
  setKeyIngredientFilter={[MockFunction]}
  setTextFilter={[MockFunction]}
  setTypeFilter={[MockFunction]}
/>
`;

exports[`should render DashbaordListFilters with alt filters 1`] = `
<DashboardListFilters
  filters={
    Object {
      "cuisine": "",
      "dishType": "",
      "keyIngredients": Array [],
      "text": "toast",
    }
  }
  setCuisineFilter={[MockFunction]}
  setKeyIngredientFilter={[MockFunction]}
  setTextFilter={[MockFunction]}
  setTypeFilter={[MockFunction]}
/>
`;
